--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,24 +1,25 @@
 <h1>Books</h1>
-<%= form_with_model: @book.each do |f
-
-<%= @books.each do |book| %>
+<% @book.each do |book| %>
 
   <p>title</p>
-  <span><%= book.title %></span>
-<% end %>
+  <span>
+    <%= link_to book.title, "/books/#{book.id}" %>
+  </span>
   <p>body</p>
-  <span><%= book.title %></span>
-  
-<% end %>
+  <span><%= book.body %></span>
+
+  <% end %>
 
 
 
   <h2>New book</h2>
+  <%= form_with model: Book.new do |f| %>
+
   <h4>Title</h4>
   <%= f.text_field :title %>
-	
+
   <h4>Body</h4>
   <%= f.text_area :body %>
-	
+
   <%= f.submit 'Create Book' %>
 <% end %>
