--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,12 +1,13 @@
 <h1>Books</h1>
 <% @book.each do |book| %>
 
-  <p>title</p>
-  <span>
-    <%= link_to book.title, "/books/#{book.id}" %>
-  </span>
+　<p>title</p>
+  <span><%= book.title %></span>
+  
   <p>body</p>
   <span><%= book.body %></span>
+  
+  <span><%= link_to "show",book_path(book.id) %>
 
   <% end %>
 
