--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,17 +1,28 @@
 <h1>Books</h1>
-<% @book.each do |book| %>
-
-　<p>title</p>
-  <span><%= book.title %></span>
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Body</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @book.each do |book| %>
+  <tr>
+  <td><%= book.title %></td>
   
-  <p>body</p>
-  <span><%= book.body %></span>
+  <td><%= book.body %></td>
   
-  <span><%= link_to "show",book_path(book.id) %>
+  <td><%= link_to "Show",book_path(book.id) %></td>
+  <td><%= link_to "Edit",edit_book_path(book.id) %></td>
+  <td><%= link_to "Destroy",book_path(book.id) %></td>
+  </tr>
 
   <% end %>
-
-
+    
+  </tbody>
+</table>
 
   <h2>New book</h2>
   <%= form_with model: Book.new do |f| %>
