--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,13 +1,29 @@
 <h1>Editing Book</h1>
 
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= form_with model: @book, url: book_path(@book.id), method: :patch do |f| %>
 
-  <h4>Title</h4>
+<div>
+  <p>Title</p>
   <%= f.text_field :title %>
-  
-  <h4>Body</h4>
+</div>
+<div>
+  <p>Body</p>
   <%= f.text_area :body %>
-  
+</div>
+
   <%= f.submit 'Update Book' %>
-  
+
 <% end %>
+
+<%= link_to "Show",book_path(@book.id) %>
+｜
+<%= link_to "back", books_path %>
