--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,5 +1,5 @@
 <h1>
-   ようこそ 
+   ようこそ
   <strong>Bookers</strong>
    へ！
 </h1>
@@ -8,6 +8,5 @@
    では、さまざまな書籍に関するあなたの意見や
 </p>
 <p>印象を共有し交換することができます</p>
-<p>
-  <a href="/books">start</a>
-</p>
+
+<%= link_to "Start", books_path %>
